All connected to DB except CustomerLAnding

--- a/FinalProject/CustomerLanding.resx
+++ b/FinalProject/CustomerLanding.resx
@@ -118,10 +118,47 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox10.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAC0AAAAqCAYAAAAnH9IiAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        EQAACxEBf2RfkQAABzBJREFUWEfNl3tQVFUcx38Lu2A8lIekILDrQguYhmHlgP1BpSSC4iNHCwPs4ZRO
+        5qQpWQFRCeKLMvOBJsqUTQ8zG3uIxTiNmVKREVj2sNJqtFHHhBL2nvttfpc9sHtxiZpd9Dvz23v33HPO
+        73N+93fOPYeodzJqv6HWAeQXP4z8hyb8qwU7Xf0siRRkTqKBA4Nd+vOiNAe+1qUfUegShI4sR8iIMgzQ
+        2/BliEhZjmuzNsGWvQm+15XBOLwcZF4LiqtCWHIFyLoNPolLNugdeEW+cY/WRt9Uipa/2gR60OkzF1C4
+        Zh8CE1bAGLoYo7MX4qXHM3B+pQnYSji+sr/il7AcptiCh/Q+PCtOif6P4o+zLUIRqgsk/7/YZkdGbhUM
+        gfNhCsxH5sTZqN12J/7+Nhs4NQFqwziIpwlitQHqiwYcWBolKLa8Re/GswodE+s/tAh2xTXIQlWhqiqM
+        Ifcg7dZ7cfS96VB/yQJOToB6ZBJE/eQOa8yFWGWEWGPQ7PeKQFBkOfRuPKvw1CF+lifRbldcoFkFj72B
+        kSmzAfs4KJ/ndIE6W3MexJZwiFUEtdKAk+VBlxfaMnoNtq7Khdo0sTustCMzIV6/BqLCAV12maGHplZi
+        Q3ku0OSUDnprmA6xZxREmfehDZ13YTfGuIO2plZiPUM39wD9+TSIfWMglnkXWluXjeaZab6R46dSUNrV
+        DH2xXYHdjk7rPfRUiLpbIJ71DjRH15dvfGyF6yipBP0S5tVTxLAgU3wRjp20o75ZaHa4WeBMCxCZUon1
+        y3sDne4VaA02aFDG1Ya4x08PSSnBjFm7VIrKfZ9C0kNMlkKcOGXHdyfacPy3dhw7AbS2AUNG9Qaa0+Nm
+        j0NrwKa4efMpchEyp9Uo52qhPjBnr0qB00HmRaDIgnYyTQIZJ4Gvew+eBn8bu6AnQuxPhqif0h2aJ+K7
+        N3h4IsbH+/sMKz5mtCxATcWP9h92qnhv/XkcqLZj74azqN14vtOO7GiFsX8e3qw9AbuELr8LaBwLqHaI
+        T8dB1OvW669mQLxug1juQWjjDWsRlPSI+LMO4pPqdtRuvIB9m1o0+7Cq1cUadyjwDc7Dzg9PukI3T9Ym
+        ZgeoDrrpboiXIro+Lp6ApojUeMO1T9ujry/Goe0XlIaX27VIH9quoPFVO47sUDrt1LvQIt0NujGjA/rT
+        27tDf303xGo/7RPuOWgiH/4x2BbvoaiHULTwE+XcXmDRwx8Ln6g5CBhRioCEBW2GgFz4Bs8CUQbervu1
+        C5pzumkCxMHbIA5f4st4aBLEM+RxaJa2NveLy7uFYhbh5gmbxNwHP1IpcuYBCh+bZLQ+hrr609i9/ze8
+        s//XjtWjXb96cIR1E/HLGRC7RkCUeweaxRHntdrHcE3hF2RbCv/4+/bToOsCTdYi/HRKwZffqZrVHxU4
+        2/pv63QOxNECiOcDtG2pt6CltCXQaC0o9LHmFVPg8EEmy5No/VvBn63oNJZ5dA9fxM+mQBwY37GXdmxL
+        vQnN0sA1hY6K9TO72XukuYPmKOdDbA6DWNUB3BfQXephl+d27/HZVIiDWS5R7lvosBtjLnVycQ+dA/HN
+        bIi1gZ257ALdJ4eA4JvCKWwxnwVVRXE9I3aHzoFovAtid7K213AGZlP4uLWCj1sVXobmJSVmyc9Zc6q6
+        hToxfR1eLHOC5s3R4RyIUoKo9OmCXd0BjFcIy/JHK2Qu+V7vw9PyJUt6P4ouvjA4uRTj57yMW+/djux5
+        r8EYU4qaylwVXzP0FIimWRBlXaDiOQI2E1BNfKBVF85IV8lWA/+Bt9n0TryhjtVkcPYd1D+thAaMWUoB
+        KfdTzJLv5867X8WZTNib8qGs9IPKoFsJYosBDUWD1LnTMtTw5KdA5u0qWSsa/Yf0DbBU1xHMIf+YzDiK
+        3oA9Nfl2bCNcXGvEBwst6sTx0xGQuBpkqb5osDzxAQ2+PYuio69yNON+uvXVV9Ic+8flZVLUCxgwfCVM
+        tnWg2M3nyDy/iiJSr5f7mssJeSlJKKJgWyIFJEU6PesTUAsRFegLr3QtICJeP836B32oNQ6OXqvkCoA+
+        TkS79IU9qSfokUS0lYjq3KRQiCO9nMX13nIYt2dxHf4vxX1OJqKHHX2z/3OOe9mmR7mDZkfckTSuw3Xl
+        swZHGRs7YxU7/nPkZBuG4IE4++D7Skc5t5U+eGDpjjo9yh00d8rlMpLcIXfMYkcMzdHierKcYTmKLG7n
+        DKeHlvVkOznwXskddLWjMyl2wvU4Jfgq00UCsSSkFA9GpoKMuqwn3xrrf0NzfjEAGzuRMOxUrjCyYxlp
+        fpX8BiS0fNVcXw6S+2FYvue6vFLwvfNq8Z+hJZCzydctB8TGkDJV+ConEDuU0Fwu/7M5R12mm2zjPIG5
+        r/8EzeIOnI1TQP/cWRw9WYcHxgNyFj/T9yHL9X31mTgqctLJvL3ixdHiico5ypG+VFQ9rn8AHEoEwIRE
+        YsAAAAAASUVORK5CYII=
+</value>
+  </data>
   <data name="pictureBox9.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DgAACw4BQL7hQQAANTRJREFUeF7tXQd0VVXWPnnvpfeEhPQCSeiEJCQhjbSXkAQSCKnM2MvYFRUUK4gC
+        DAAACwwBP0AiyAAANTRJREFUeF7tXQd0VVXWPnnvpfeEhPQCSeiEJCQhjbSXkAQSCKnM2MvYFRUUK4gC
         AjqWcWw/jn10HKSIiCAOKBYYQEiCFXCso86o2BWCs//17XvPfffdd9MgoUjOWnulvHrv3mfvb9cjxPGz
         PIUQQ4QQ84QQW4UQ3wshfhRCfCaEeF0I8ZgQ4kYhxBlCiPFCiHAhhJ8QwksI4S6EsBjfsH8dPytECHG7
         EGKfEOJnIUS7EOJ/OsLf+9XHfhBCfCeE+EoI8bYQ4gkhxJVCiHIhRKQqFBAmq/FD+texuaLUHX5ACEGS
@@ -354,7 +391,7 @@
   <data name="pictureBox8.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DwAACw8BkvkDpQAANTRJREFUeF7tXQd0VVXWPnnvpfeEhPQCSeiEJCQhjbSXkAQSCKnM2MvYFRUUK4gC
+        DQAACw0B7QfALAAANTRJREFUeF7tXQd0VVXWPnnvpfeEhPQCSeiEJCQhjbSXkAQSCKnM2MvYFRUUK4gC
         AjqWcWw/jn10HKSIiCAOKBYYQEiCFXCso86o2BWCs//17XvPfffdd9MgoUjOWnulvHrv3mfvb9cjxPGz
         PIUQQ4QQ84QQW4UQ3wshfhRCfCaEeF0I8ZgQ4kYhxBlCiPFCiHAhhJ8QwksI4S6EsBjfsH8dPytECHG7
         EGKfEOJnIUS7EOJ/OsLf+9XHfhBCfCeE+EoI8bYQ4gkhxJVCiHIhRKQqFBAmq/FD+texuaLUHX5ACEGS
@@ -587,7 +624,7 @@
   <data name="pictureBox7.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAANTRJREFUeF7tXQd0VVXWPnnvpfeEhPQCSeiEJCQhjbSXkAQSCKnM2MvYFRUUK4gC
+        DgAACw4BQL7hQQAANTRJREFUeF7tXQd0VVXWPnnvpfeEhPQCSeiEJCQhjbSXkAQSCKnM2MvYFRUUK4gC
         AjqWcWw/jn10HKSIiCAOKBYYQEiCFXCso86o2BWCs//17XvPfffdd9MgoUjOWnulvHrv3mfvb9cjxPGz
         PIUQQ4QQ84QQW4UQ3wshfhRCfCaEeF0I8ZgQ4kYhxBlCiPFCiHAhhJ8QwksI4S6EsBjfsH8dPytECHG7
         EGKfEOJnIUS7EOJ/OsLf+9XHfhBCfCeE+EoI8bYQ4gkhxJVCiHIhRKQqFBAmq/FD+texuaLUHX5ACEGS
@@ -820,7 +857,7 @@
   <data name="pictureBox6.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAIAAAACACAYAAADDPmHLAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EQAACxEBf2RfkQAANTRJREFUeF7tXQd0VVXWPnnvpfeEhPQCSeiEJCQhjbSXkAQSCKnM2MvYFRUUK4gC
+        DwAACw8BkvkDpQAANTRJREFUeF7tXQd0VVXWPnnvpfeEhPQCSeiEJCQhjbSXkAQSCKnM2MvYFRUUK4gC
         AjqWcWw/jn10HKSIiCAOKBYYQEiCFXCso86o2BWCs//17XvPfffdd9MgoUjOWnulvHrv3mfvb9cjxPGz
         PIUQQ4QQ84QQW4UQ3wshfhRCfCaEeF0I8ZgQ4kYhxBlCiPFCiHAhhJ8QwksI4S6EsBjfsH8dPytECHG7
         EGKfEOJnIUS7EOJ/OsLf+9XHfhBCfCeE+EoI8bYQ4gkhxJVCiHIhRKQqFBAmq/FD+texuaLUHX5ACEGS
@@ -1053,7 +1090,7 @@
   <data name="pictureBox5.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAP4AAAEjCAYAAAASQbwUAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DgAACw4BQL7hQQAABMdJREFUeF7t281t21gYQFGV4BJSgktyR+MOnE5ouQEBE3rtEgRk6Mwyg+f8AKaE
+        DAAACwwBP0AiyAAABMdJREFUeF7t281t21gYQFGV4BJSgktyR+MOnE5ouQEBE3rtEgRk6Mwyg+f8AKaE
         wM4mI97zAWejR2h3+R5lerd74xwP09Xnebp5nh/unuf9YZn3x+d5/xX4M743eBhNLvN0Mxpdd/vbczxM
         H77MD38JHS7Bw91odt3xm2fcPUbwp18M/N+Ndt99Ahh3jOfH/dP6y4AL8rh/evPufzxM16KHjXjcPy3z
         dL3u/NXY6WGDfrXzj+cB0cNGfYv/9JnfD3mwbaPxV9G/HPHPXAhsy6sj//eXck4uArZlmafbH7v91XoR
@@ -1079,7 +1116,7 @@
   <data name="pictureBox4.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAP4AAAEjCAYAAAASQbwUAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DwAACw8BkvkDpQAABMdJREFUeF7t281t21gYQFGV4BJSgktyR+MOnE5ouQEBE3rtEgRk6Mwyg+f8AKaE
+        DQAACw0B7QfALAAABMdJREFUeF7t281t21gYQFGV4BJSgktyR+MOnE5ouQEBE3rtEgRk6Mwyg+f8AKaE
         wM4mI97zAWejR2h3+R5lerd74xwP09Xnebp5nh/unuf9YZn3x+d5/xX4M743eBhNLvN0Mxpdd/vbczxM
         H77MD38JHS7Bw91odt3xm2fcPUbwp18M/N+Ndt99Ahh3jOfH/dP6y4AL8rh/evPufzxM16KHjXjcPy3z
         dL3u/NXY6WGDfrXzj+cB0cNGfYv/9JnfD3mwbaPxV9G/HPHPXAhsy6sj//eXck4uArZlmafbH7v91XoR
@@ -1105,7 +1142,7 @@
   <data name="pictureBox3.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAP4AAAEjCAYAAAASQbwUAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAABMdJREFUeF7t281t21gYQFGV4BJSgktyR+MOnE5ouQEBE3rtEgRk6Mwyg+f8AKaE
+        DgAACw4BQL7hQQAABMdJREFUeF7t281t21gYQFGV4BJSgktyR+MOnE5ouQEBE3rtEgRk6Mwyg+f8AKaE
         wM4mI97zAWejR2h3+R5lerd74xwP09Xnebp5nh/unuf9YZn3x+d5/xX4M743eBhNLvN0Mxpdd/vbczxM
         H77MD38JHS7Bw91odt3xm2fcPUbwp18M/N+Ndt99Ahh3jOfH/dP6y4AL8rh/evPufzxM16KHjXjcPy3z
         dL3u/NXY6WGDfrXzj+cB0cNGfYv/9JnfD3mwbaPxV9G/HPHPXAhsy6sj//eXck4uArZlmafbH7v91XoR
@@ -1131,7 +1168,7 @@
   <data name="pictureBox2.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAP4AAAEjCAYAAAASQbwUAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        EAAACxABrSO9dQAABMdJREFUeF7t281t21gYQFGV4BJSgktyR+MOnE5ouQEBE3rtEgRk6Mwyg+f8AKaE
+        DgAACw4BQL7hQQAABMdJREFUeF7t281t21gYQFGV4BJSgktyR+MOnE5ouQEBE3rtEgRk6Mwyg+f8AKaE
         wM4mI97zAWejR2h3+R5lerd74xwP09Xnebp5nh/unuf9YZn3x+d5/xX4M743eBhNLvN0Mxpdd/vbczxM
         H77MD38JHS7Bw91odt3xm2fcPUbwp18M/N+Ndt99Ahh3jOfH/dP6y4AL8rh/evPufzxM16KHjXjcPy3z
         dL3u/NXY6WGDfrXzj+cB0cNGfYv/9JnfD3mwbaPxV9G/HPHPXAhsy6sj//eXck4uArZlmafbH7v91XoR
@@ -1157,7 +1194,7 @@
   <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAAkIAAAG5CAYAAABiGltHAAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
-        DgAACw4BQL7hQQAAnuRJREFUeF7tnQd4VMXax2fTCyEhDULvIEhv0ntLKKF3BUFEUEBF7Iq9i157xd6i
+        DAAACwwBP0AiyAAAnuRJREFUeF7tnQd4VMXax2fTCyEhDULvIEhv0ntLKKF3BUFEUEBF7Iq9i157xd6i
         n1e99utFr1e96lXsBUVQ6S2kly3/73ln98STOWdbskl2s+/7PL8nsDtnZs6cMv99550ZgRdzwDAMwzAM
         Y8pLOVtFYzbDCTMMwzAMw+jJm7pR1Q+NxgwnyzAMwzAMU518vJDdV9UQjcJMTpZhGIZhGKY6L+XsxrYx
         KaqOCHkznCjDMAzDMIwZL+VsU3VEyJvhJBmGYRiGYdzR2OKFDCfIMAzDMAzjnnw8O6W9qidC1kxOkGEY
